--- a/stress/src/main/resources/application.properties
+++ b/stress/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=stress
+
+# JPA
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.defer-datasource-initialization=true
+
+# SQL Init
+spring.sql.init.mode=always
+
+# Actuator
+management.endpoints.web.exposure.include=health,metrics,info
+management.endpoint.health.show-details=always
