--- a/stress/src/main/resources/application.properties
+++ b/stress/src/main/resources/application.properties
@@ -1,14 +1,24 @@
 spring.application.name=stress
-
+spring.datasource.url=jdbc:postgresql://stress-db:5432/stresslab
+spring.datasource.username=postgres
+spring.datasource.password=pass1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+# HikariCP 설정
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.leak-detection-threshold=60000
 # JPA
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.defer-datasource-initialization=true
-
 # SQL Init
 spring.sql.init.mode=always
-
 # Actuator
 management.endpoints.web.exposure.include=health,metrics,info
 management.endpoint.health.show-details=always
