성능 테스트 poc setting 완료

--- a/stress/src/main/resources/application.properties
+++ b/stress/src/main/resources/application.properties
@@ -22,3 +22,18 @@ spring.sql.init.mode=always
 # Actuator
 management.endpoints.web.exposure.include=health,metrics,info
 management.endpoint.health.show-details=always
+
+# Logging
+logging.level.root=INFO
+logging.level.com.yoon.stress=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# HTTP Request Logging
+logging.level.web=DEBUG
+spring.mvc.log-request-details=true
+
+# Console Logging Pattern
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
